<resources>
    <string name="app_name">NavDrawer</string>
    <string name="action_settings">Settings</string>
    <string name="home_item">Home</string>
    <string name="products_item">products</string>
    <string name="cart_item">carrito</string>
    <string name="orders_item">Ordenes</string>
    <string name="invoices_item">facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="settings_item">Configuracion</string>
    <string name="email_navdrawer">a@asantiago.me</string>
    <string name="name_navdrawer">Amador</string>
</resources>
