<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item"/>
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_truck"
            android:title="@string/products_item"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/cart_item"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_store"
            android:title="@string/orders_item"/>
        <item
            android:id="@+id/nav_invoices"
            android:icon="@drawable/ic_file_document"
            android:title="@string/invoices_item"/>
        <item
            android:id="@+id/configuration_section"
            android:title="@string/settings_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:title="@string/log_out_item"/>
            </menu>
        </item>
    </group>
</menu>